--- a/apps/ws-server/package.json
+++ b/apps/ws-server/package.json
@@ -17,7 +17,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@repo/database": "workspace:*",
+    "@repo/db": "workspace:*",
     "dotenv": "^16.5.0",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
